add some changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProjectFlow - Collaborative Project Management</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="client/css/styles.css" />
   </head>
 
   <body>
@@ -264,6 +264,6 @@
       </div>
     </div>
 
-    <script src="js/app.js"></script>
+    <script src="client/js/app.js"></script>
   </body>
 </html>
