--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div id="main-app" style="display: none">
         <div class="container">
           <div class="header">
-            <div class="logo">ProjectFlow</div>
+            <div class="logo">Collaborative Tool</div>
             <div class="user-info">
               <div
                 class="notification-badge"
